// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton avatar shape 1`] = `
<div
  class="fishd-skeleton fishd-skeleton-with-avatar"
>
  <div
    class="fishd-skeleton-header"
  >
    <span
      class="fishd-skeleton-avatar fishd-skeleton-avatar-lg fishd-skeleton-avatar-circle"
    />
  </div>
  <div
    class="fishd-skeleton-content"
  >
    <h3
      class="fishd-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="fishd-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar shape 2`] = `
<div
  class="fishd-skeleton fishd-skeleton-with-avatar"
>
  <div
    class="fishd-skeleton-header"
  >
    <span
      class="fishd-skeleton-avatar fishd-skeleton-avatar-lg fishd-skeleton-avatar-square"
    />
  </div>
  <div
    class="fishd-skeleton-content"
  >
    <h3
      class="fishd-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="fishd-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 1`] = `
<div
  class="fishd-skeleton fishd-skeleton-with-avatar"
>
  <div
    class="fishd-skeleton-header"
  >
    <span
      class="fishd-skeleton-avatar fishd-skeleton-avatar-sm fishd-skeleton-avatar-circle"
    />
  </div>
  <div
    class="fishd-skeleton-content"
  >
    <h3
      class="fishd-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="fishd-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 2`] = `
<div
  class="fishd-skeleton fishd-skeleton-with-avatar"
>
  <div
    class="fishd-skeleton-header"
  >
    <span
      class="fishd-skeleton-avatar fishd-skeleton-avatar-circle"
    />
  </div>
  <div
    class="fishd-skeleton-content"
  >
    <h3
      class="fishd-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="fishd-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 3`] = `
<div
  class="fishd-skeleton fishd-skeleton-with-avatar"
>
  <div
    class="fishd-skeleton-header"
  >
    <span
      class="fishd-skeleton-avatar fishd-skeleton-avatar-lg fishd-skeleton-avatar-circle"
    />
  </div>
  <div
    class="fishd-skeleton-content"
  >
    <h3
      class="fishd-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="fishd-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph rows 1`] = `
<div
  class="fishd-skeleton"
>
  <div
    class="fishd-skeleton-content"
  >
    <h3
      class="fishd-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="fishd-skeleton-paragraph"
    >
      <li />
      <li />
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph width 1`] = `
<div
  class="fishd-skeleton"
>
  <div
    class="fishd-skeleton-content"
  >
    <h3
      class="fishd-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="fishd-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 93%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph width 2`] = `
<div
  class="fishd-skeleton"
>
  <div
    class="fishd-skeleton-content"
  >
    <h3
      class="fishd-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="fishd-skeleton-paragraph"
    >
      <li
        style="width: 28%;"
      />
      <li
        style="width: 93%;"
      />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton title width 1`] = `
<div
  class="fishd-skeleton"
>
  <div
    class="fishd-skeleton-content"
  >
    <h3
      class="fishd-skeleton-title"
      style="width: 93%;"
    />
    <ul
      class="fishd-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;
